<resources>
    <string name="app_name">Latihan 3</string>
    <string name="tanda_tambah">+</string>
    <string name="tanda_kurang">-</string>
    <string name="reset">RESET</string>
    <string name="judul">Judul Aktivitas</string>
    <string name="counter">Jumlah Counter</string>
    <string name="kirim">Kirim</string>
    <string name="camera">Tekan untuk Foto</string>
    <string name="nama_menu">Nama Makanan : </string>
    <string name="harga_menu">Harga : </string>
    <string name="simpan">Simpan</string>
    <string name="fullName">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="major">Program Studi</string>
    <string name="hobby">Hobi</string>
    <string name="address">Alamat Domisili</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about_us">About Us</string>
    <string name="allowNotification">Aktifkan Notifikasi ?</string>
    <string name="send">Send</string>
    <string name="formTitle">Formulir Pendaftaran Mahasiswa</string>
    <string name="NIM">NIM</string>
    <string name="name">Gede Rico Wijaya</string>
    <string name="myNIM">2005551091</string>
    <string name="back">BACK</string>
    <string name="backConfirmation">Apakah Anda Ingin kembali ?</string>
    <string name="backTitle">Kembali ke Menu Sebelumnya</string>
    <string name="confirm">Ya</string>
    <string name="deny">Tidak</string>
    <string name="homeTitle">Mobile App Practice, Menu</string>
    <string-array name="majorList">
        <item>Teknologi Informasi</item>
        <item>Teknik Arsitektur</item>
        <item>Teknik Lingkungan</item>
        <item>Teknik Elektro</item>
        <item>Teknik Mesin</item>
        <item>Teknik Pertanian</item>
        <item>Teknik Perikanan</item>
        <item>Teknik Sipil</item>
        <item>Teknik Industri</item>
    </string-array>
</resources>
