<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationFormActivity">
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/formTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="40dp"
                android:text="@string/formTitle">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/fullName">
            </TextView>
            <EditText
                android:id="@+id/fullName"
                android:focusable="true"
                android:nextFocusDown="@id/NIM"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/NIM">
            </TextView>
            <EditText
                android:id="@+id/NIM"
                android:focusable="true"
                android:nextFocusDown="@id/password"
                android:layout_margin="10dp"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/password">
            </TextView>
            <EditText
                android:id="@+id/password"
                android:focusable="true"
                android:nextFocusDown="@id/major"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/major">
            </TextView>
            <Spinner
                android:id="@+id/major"
                android:focusable="true"
                android:nextFocusDown="@id/hobby"
                android:layout_margin="10dp"
                android:entries="@array/majorList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/hobby">
            </TextView>
            <EditText
                android:id="@+id/hobby"
                android:focusable="true"
                android:nextFocusDown="@id/email"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/email">
            </TextView>
            <EditText
                android:id="@+id/email"
                android:layout_margin="10dp"
                android:focusable="true"
                android:nextFocusDown="@id/address"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/address">
            </TextView>
            <EditText
                android:id="@+id/address"
                android:layout_margin="10dp"
                android:focusable="true"
                android:nextFocusDown="@string/allowNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/allowNotification"
                android:focusable="true"
                android:nextFocusDown="@id/sendForm"
                android:text="@string/allowNotification"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </CheckBox>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/resetForm"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/reset">
            </Button>
            <Button
                android:id="@+id/sendForm"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/send">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>