<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:weightSum="20"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:weightSum="5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/judul_aktivitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="22dp"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/judul"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/kirim_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight= "3.5"
            android:text="@string/kirim"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="16"
        android:background="@color/xanandu">
        <TextView
            android:id="@+id/angka"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:text="0"
            android:textSize="270sp"
            android:textColor="@color/emerald"
            android:textAlignment="center"
            android:background="@color/mountbatten_pink"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_kurang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tanda_kurang"
            android:background="@color/mountbatten_pink"
            android:textColor="@color/emerald"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/granny_apple"
            android:text="@string/reset"
            android:textColor="@color/emerald"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/button_tambah"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tanda_tambah"
            android:background="@color/mountbatten_pink"
            android:textColor="@color/emerald"
            android:backgroundTint="@color/mountbatten_pink"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>