<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FormActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:layout_margin="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nama_menu"
                android:textSize="20dp"
                android:layout_weight="1">
            </TextView>

            <EditText
                android:id="@+id/input_nama_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:inputType="text"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:layout_weight="1">
            </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/harga_menu"
            android:textSize="20dp"
            android:layout_weight="1">
        </TextView>

        <EditText
            android:id="@+id/input_harga_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:inputType="text"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            android:layout_weight="1">
        </EditText>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simpan_button"
        android:text="@string/simpan"
        android:layout_gravity="center">
    </Button>

    ## ini dbuat dinamis
    <LinearLayout
        android:id="@+id/hasil_simpan_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="top">
    </LinearLayout>

</LinearLayout>