<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CameraActivity"
    android:orientation="vertical"
    android:layout_margin="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="16sp"
                android:text="@string/judul" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.47"
                android:textSize="16sp"
                android:text=":"/>
            <TextView
                android:id="@+id/data1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.03"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="16sp"
                android:text="@string/counter" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.47"
                android:textSize="16sp"
                android:text=":"/>
            <TextView
                android:id="@+id/data2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.03"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/kamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginBottom="20dp"/>

        <ImageView
            android:id="@+id/gambar"
            android:layout_width="400dp"
            android:layout_height="450dp" />
    </LinearLayout>
</LinearLayout>